--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,17 @@
-# Node modules
+# Node
 node_modules/
 **/node_modules/
 
-# pnpm store files
-.pnp/
-.pnpm-debug.log*
+.pnpm-store/
+# pnpm lockfile is usually committed
+# pnpm-lock.yaml
+
+# Turbo cache
+# Turbo stores its local cache here
+.turbo/
+# Optional: also cache .next builds if you want them ignored
+**/.next/
+**/dist/
 
 # Logs
 logs
@@ -13,28 +20,29 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Build output
-dist/
-out/
-.astro/
-.next/
-build/
-.vercel/
+# OS files
+.DS_Store
+Thumbs.db
+
+# Editor files
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# TypeScript
 *.tsbuildinfo
 
-# Env files
+# Optional: test coverage
+coverage/
+
+# Optional: env files
 .env
 .env.local
 .env.*.local
 
-# IDE / editor
-.vscode/
-.idea/
-.DS_Store
-
-# Mac system files
+# Misc
 *.swp
 *.swo
-
-# Optional: cache folders
-.cache/
