--- a/applications/portfolio/package.json
+++ b/applications/portfolio/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@create-neel/astro-app",
+  "name": "@mononeel/portfolio",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
