--- a/applications/next-app/package.json
+++ b/applications/next-app/package.json
@@ -12,7 +12,7 @@
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "@create-neel/ui": "workspace:*"
+    "@mononeel/ui": "workspace:*"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
