--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,7 +1,16 @@
 {
-  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "jsx": "react-jsx"
+    "outDir": "dist",
+    "declaration": true,
+    "emitDeclarationOnly": false,
+
+    "jsx": "react-jsx",
+    "module": "ESNext",
+    "target": "ES2019",
+    "moduleResolution": "Bundler",
+
+    "strict": true,
+    "skipLibCheck": true
   },
   "include": ["src"]
 }
