--- a/applications/next-app/package.json
+++ b/applications/next-app/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "pnpm --filter @mononeel/ui build && next build",
     "start": "next start",
     "lint": "eslint"
   },
