--- a/turbo.json
+++ b/turbo.json
@@ -5,6 +5,12 @@
       "dependsOn": ["^build"],
       "outputs": ["dist/**"]
     },
+    "pipeline": {
+      "build": {
+        "dependsOn": ["^build"],
+        "outputs": ["dist/**", ".next/**"]
+      }
+    },
     "lint": {},
     "test": {}
   }
